# Thesis2022

./: .gitattributes  .gitignore  README.md  environment.yaml  pyproject.toml  setup.py
data/kitti/ImageSets/: test.txt  train.txt  val.txt
docker/: Dockerfile  README.md  cudatoolkit.Dockerfile  kitti.Dockerfile  spconv.Dockerfile  start.sh
pcdet/: __init__.py  config.py
pcdet/datasets/: __init__.py  dataset.py  dataset_interface.py  flat_sampler.py  idataset.py  sampler.py  utils.py
pcdet/datasets/augmentor/: augmentor_utils.py  data_augmentor.py  database_sampler.py
pcdet/datasets/kitti/: calibration.py  kitti_dataset.py  kitti_utils.py  object3d.py
pcdet/datasets/lyft/: lyft_dataset.py
pcdet/datasets/nuscenes/: nuscenes_dataset.py
pcdet/datasets/pandaset/: pandaset_dataset.py
pcdet/datasets/processor/: __init__.py  data_processor.py  point_feature_encoder.py
pcdet/datasets/waymo/: waymo_dataset.py  waymo_eval.py  waymo_utils.py
pcdet/models/: __init__.py  ia_ssd.py  ia_ssd_ln.py  ia_ssd_seq.py  nms.py  post_process.py
pcdet/models/backbones_2d/: SSFA_backbone.py  __init__.py  base_bev_backbone.py  ssfa_backbone.py  transformer.py
pcdet/models/backbones_3d/: __init__.py  ia_ssd_backbone.py  ia_ssd_backbone_residual.py  pointnet2_backbone.py  spconv_backbone.py  spconv_unet.py  votr_backbone.py
pcdet/models/dense_heads/: __init__.py  anchor_head_interface.py  anchor_head_multi.py  anchor_head_single.py  anchor_head_template.py  center_head.py  ia_ssd_head.py  ia_ssd_ln.py  ia_ssd_seq_head.py  point_head_box.py  point_head_interface.py  point_head_simple.py  point_head_template.py  point_intra_part_head.py
pcdet/models/detectors/: __init__.py  caddn.py  centerpoint.py  ct3d.py  ct3d3c.py  ct3d_3cat.py  detector3d_interface.py  detector3d_template.py  ia_ssd.py  parta2_net.py  point_rcnn.py  point_trcnn.py  point_trcnn_3d.py  pv_rcnn.py  (+10 more)
pcdet/ops/: residual_mlp.py
pcdet/utils/: box_coder_utils.py  box_utils.py  calibration_kitti.py  common_utils.py  commu_utils.py  loss_utils.py  resolver.py  spconv_utils.py
tools/: compare_yaml.py  demo.py  evaluate.py  test.py  test_utils.py  train.py
tools/eval_utils/: eval_utils.py
tools/scripts/: dist_train.sh  torch_train.sh
tools/train_utils/: train_utils.py
tools/visual_utils/: open3d_vis_utils.py  visualize_utils.py
(+162 files in other folders)
