[build-system]
requires = ['setuptools>=61', 'wheel', 'torch']
build-backend = 'setuptools.build_meta'

[project]
name = 'pcdet'
authors = [{ name = 'Shaoshuai Shi', email = 'shaoshuaics@egmail.com' }]
description = 'OpenPCDet is a general codebase for 3D object detection from point cloud'
license = { file = 'LICENSE' }
version = '0.5.2'
dependencies = [
  'hydra-core',
  'numba',
  'scipy',
  'SharedArray',
  'tensorboard',
  'torch',
  'tqdm',
]

[tool.setuptools.package-dir]
pcdet = 'pcdet'

[tool.black]
line-length = 100

[tool.flake8]
extend-ignore = 'E203'
max-line-length = 100

[tool.isort]
profile = 'black'
