[build-system]
requires = ['setuptools>=61', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'pcdet'
authors = [{ email = 'shaoshuaics@egmail.com' }, { name = 'Shaoshuai Shi' }]
description = 'OpenPCDet is a general codebase for 3D object detection from point cloud'
license = { file = 'LICENSE' }
dependencies = [
  'easydict',
  'numba',
  'numpy',
  'pyyaml',
  'scikit-image',
  'SharedArray',
  'tensorboard',
  'tqdm',
]
dynamic = ['version']

[tool.setuptools.package-dir]
pcdet = 'pcdet'

[tool.setuptools.dynamic]
version = { attr = 'pcdet.__version__' }

[tool.black]
line-length = 100

[tool.isort]
profile = 'black'

[tool.pylint.main]
extension-pkg-allow-list = ['pcdet.ops.*._C']

[tool.pylint.messages_control]
disable = ['missing-docstring']

[tool.pylint.typecheck]
generated-members = 'numpy.*,torch.*'
